tests/diag/transformer-raise.err
<unknown>: error: exited with reason {:error :kaboom}
  in expansion of 'boomer' (tests/diag/transformer-raise.ish:2:1)
