tests/diag/transformer-raise.ish
defmacro boomer stx -> error :kaboom
boomer x
